--- a/package.json
+++ b/package.json
@@ -3,23 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "date-fns": "^2.11.1",
+    "antd": "^4.16.13",
+    "css-loader": "^6.5.1",
+    "date-fns": "^2.26.0",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
+    "node-sass": "^6.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "remark": "^12.0.0",
-    "remark-html": "^12.0.0"
+    "remark-html": "^12.0.0",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
     "@types/node": "^13.11.0",
-    "@types/react": "^16.9.32",
+    "@types/react": "^16.14.21",
+    "cross-env": "^7.0.3",
     "typescript": "^3.8.3"
   }
 }
