--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa": "^2.14.1",
     "log4js": "^6.7.1",
     "next": "13.0.5",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
